--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,1 @@
-<header>
-  <p class="typography--headline">
-    <ed-icon name="Pokeball"></ed-icon> Pokédex
-  </p>
-  <div class="filters">
-    <ed-search-bar></ed-search-bar>
-    <ed-sort-btn></ed-sort-btn>
-  </div>
-</header>
-
-<main></main>
+<router-outlet></router-outlet>
