feat(pokedex-list-component): add a routerlink to cards for pokemon-details

--- a/src/app/pages/components/pokedex-list/pokedex-list.component.html
+++ b/src/app/pages/components/pokedex-list/pokedex-list.component.html
@@ -14,5 +14,6 @@
     [name]="pokemon.name"
     [order]="pokemon.order"
     [imgSrc]="pokemon.sprites.frontDefault"
+    [routerLink]="pokemon.id.toString()"
   ></ed-pokemon-card>
 </main>
