feat(search-bar-component): implement custm form control

--- a/src/app/pages/components/pokedex-list/pokedex-list.component.html
+++ b/src/app/pages/components/pokedex-list/pokedex-list.component.html
@@ -3,7 +3,7 @@
     <ed-icon name="Pokeball"></ed-icon> Pokédex
   </p>
   <div class="filters">
-    <ed-search-bar></ed-search-bar>
+    <ed-search-bar [formControl]="searchControl"></ed-search-bar>
     <ed-sort-btn></ed-sort-btn>
   </div>
 </header>
