--- a/src/app/shared/components/search-bar/search-bar.component.html
+++ b/src/app/shared/components/search-bar/search-bar.component.html
@@ -1,3 +1,7 @@
 <ed-icon name="Search"></ed-icon>
 
-<input class="typography--body3" placeholder="Search" />
+<input
+  [formControl]="termControl"
+  class="typography--body3"
+  placeholder="Search"
+/>
