--- a/src/app/shared/components/search-bar/search-bar.component.html
+++ b/src/app/shared/components/search-bar/search-bar.component.html
@@ -2,6 +2,8 @@
 
 <input
   [formControl]="termControl"
+  (click)="onTouced && onTouced()"
+  (focus)="onTouced && onTouced()"
   class="typography--body3"
   placeholder="Search"
 />
